# sui-purse

./: .env  Cargo.toml
.cargo/: config.toml
src/: main.rs  swagger.rs
src/db/: init.rs
src/modules/: mod.rs
src/modules/sui/services/: mod.rs  sui_core.rs
src/modules/wallets/services/: mod.rs  wallets_crud.rs
src/state/: app_state.rs
