[package]
name = "sui-purse"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
sqlx = { version = "0.8.5", features = ["postgres", "tls-native-tls", "runtime-tokio", "macros", "uuid", "chrono"] }
dotenvy = "0.15" # to load .env
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.8"
bcrypt = "0.17.0"
headers = "0.4"
async-trait = "0.1"
axum-extra ={version= "0.10.1", features =["typed-header"]}
tracing = "0.1"
tracing-subscriber = "0.3"